bin/ingress/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - 'https.example.com'
    port:
      name: https-port
      number: 443
      protocol: HTTPS
    tls:
      credentialName: platform-cert
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: istio-system
spec:
  hosts:
  - "httpbin.default"
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: "httpbin.default.svc.cluster.local"
        port:
          number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-system
spec:
  hosts:
  - "nginx.default"
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        host: "my-nginx.default.svc.cluster.local"
        port:
          number: 443
